--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,7 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+index:
+    path: /
+    controller: App\Controller\ArticleController::homepage
+
+article_show:
+    path: /show/{slug}
+    controller: App\Controller\ArticleController::show
