--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,14 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "fzaninotto/faker": "^1.8",
         "knplabs/knp-markdown-bundle": "^1.7",
+        "knplabs/knp-time-bundle": "^1.8",
         "nexylan/slack-bundle": "^2.0",
         "php-http/guzzle6-adapter": "^1.1",
         "sensio/framework-extra-bundle": "^5.2",
         "sensiolabs/security-checker": "^5.0",
+        "stof/doctrine-extensions-bundle": "^1.3",
         "symfony/asset": "*",
         "symfony/console": "*",
         "symfony/flex": "^1.1",
@@ -19,6 +22,7 @@
         "symfony/yaml": "*"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.0",
         "easycorp/easy-log-handler": "^1.0.7",
         "symfony/debug-bundle": "^3.3|^4.0",
         "symfony/dotenv": "*",
@@ -70,7 +74,7 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
+            "allow-contrib": true,
             "require": "4.1.*"
         }
     }
