--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -21,3 +21,11 @@ new_article:
 admin_comment:
     path: /admin/comment
     controller: App\Controller\CommentAdminController::index
+
+app_login:
+    path: /login
+    controller: App\Controller\SecurityController::login
+
+app_logout:
+    path: /logout
+    controller: App\Controller\SecurityController::logout
